--- a/AVFORM III/CSS/style.css
+++ b/AVFORM III/CSS/style.css
@@ -39,7 +39,7 @@ body {
     width: 31rem; 
 }
 
-.form {
+.formu {
     width: 50%;
     display: flex;
     justify-content: center;
@@ -145,7 +145,7 @@ body {
         width: 50%;
     }
 
-    .form {
+    .formu {
         width: 100%;
     }
 }
